--- a/feigndemo2/src/main/resources/application.properties
+++ b/feigndemo2/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.application.name=feigndemo2
 server.port=8082
 spring.cloud.consul.config.enabled=false
+management.endpoints.web.exposure.include=*
+spring.cloud.consul.discovery.preferIpAddress=true
