--- a/feigndemo3/src/main/resources/application.properties
+++ b/feigndemo3/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.application.name=feigndemo3
 server.port=8083
-spring.cloud.consul.config.enabled=false
+#spring.cloud.consul.config.enabled=false
+management.endpoints.web.exposure.include=*
+spring.cloud.consul.discovery.preferIpAddress=true
